--- a/package.json
+++ b/package.json
@@ -9,13 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.26.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.6",
+    "@mui/x-date-pickers": "^6.19.0",
+    "@prisma/client": "^5.5.2",
+    "@tanstack/react-query": "^5.8.1",
+    "@tanstack/react-query-devtools": "^5.8.1",
+    "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
+    "next": "14.1.0",
+    "openai": "^4.14.2",
     "react": "^18",
+    "react-daisyui": "^5.0.0",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-final-form": "^6.5.9",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^3.9.4",
     "postcss": "^8",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3.3.0"
   }
 }
